--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">AUG 2022 - SEP 2022</span>
-    					<h2>Elaraby Group</h2>
-    					<span class="position">National Telecommunication Institute - NTI <a target="_blank" href="https://www.elarabygroup.com/en">www.elarabygroup.com</a></span>
+    					<h2>Full stack .Net Developer Trainee</h2>
+    					<span class="position">Elaraby Group <br> <a target="_blank" href="https://www.elarabygroup.com/en">www.elarabygroup.com</a></span>
     					<p class="mt-4">Training in creating and designing websites, databases,
 							and backend programming.<br>
 							Using HTML, CSS, JavaScript, Bootstrap, MS SQL,<br>
