Add More Skills

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Ibrahim Karam</span></h1>
 			            <h2 class="mb-4">A Full stack .Net Developer</h2>
-			            <p><a href="mailto:ebrahem.karm23@gmail.com" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="mailto:ebrahem.karm23@gmail.com" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -79,7 +79,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm a <span>web Developer</span> based in Egypt</h1>
-			            <p><a href="mailto:ebrahem.karm23@gmail.com" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="mailto:ebrahem.karm23@gmail.com" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -136,14 +136,14 @@
         </div>
     		<div class="row">
     			<div class="col-md-6">
-    				<div class="resume-wrap ftco-animate" style="height: 400px;">
+    				<div class="resume-wrap ftco-animate">
     					<span class="date">APR 2023 - Present</span>
     					<h2>Full stack .Net Developer</h2>
     					<span class="position">Ministry of Planning and Economic Development <a target="_blank" href="https://www.mped.gov.eg">www.mped.gov.eg</a></span>
     					<p class="mt-4">I work on creating, designing, and maintaining websites and digital transformation projects for the Arab Republic of Egypt using Microsoft technologies such as .NET Framework and Microsoft SQL Server, along with interface design languages such as HTML, CSS, and JavaScript.</p>
     				</div>
     				
-    				<div class="resume-wrap ftco-animate" style="height: 650px;">
+    				<div class="resume-wrap ftco-animate">
     					<span class="date">OCT 2022 - NOV 2022</span>
     					<h2>ICT SUPPORT</h2>
     					<span class="position">United Nations Climate
@@ -176,7 +176,7 @@
 							Training on creating websites using MVC technology.<br>
 							Practice creating databases.</p>
     				</div>
-					<div class="resume-wrap ftco-animate" style="height: 420px;">
+					<div class="resume-wrap ftco-animate">
     					<span class="date">SEP 2021 - OCT 2021</span>
     					<h2>.NET DEVELOPER TRAINEE</h2>
     					<span class="position">National Council for Woman - NCW <a target="_blank" href="http://ncw.gov.eg/">www.ncw.gov.eg</a></span>
@@ -188,7 +188,7 @@
     			</div>
 
     			<div class="col-md-6">
-    				<div class="resume-wrap ftco-animate" style="height: 400px;">
+    				<div class="resume-wrap ftco-animate">
     					<span class="date">DEC 2022 - Present</span>
     					<h2>Full stack .Net Developer</h2>
     					<span class="position">Technology and Business Integration - TBI <a target="_blank" href="https://www.tbico.cloud">www.tbico.cloud</a></span>
