--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 							<div class="progress">
 							 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
-							    <span>95%</span>
+							    <span>97%</span>
 							  	</div>
 							</div>
 						</div>
@@ -380,7 +380,7 @@
 							<div class="progress">
 							 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-							    <span>90%</span>
+							    <span>93%</span>
 							  	</div>
 							</div>
 						</div>
@@ -391,7 +391,7 @@
 							<div class="progress">
 							 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-							    <span>90%</span>
+							    <span>95%</span>
 							  	</div>
 							</div>
 						</div>
@@ -402,7 +402,7 @@
 							<div class="progress">
 							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-							    <span>80%</span>
+							    <span>85%</span>
 							  	</div>
 							</div>
 						</div>
@@ -413,7 +413,7 @@
 							<div class="progress">
 							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-							    <span>75%</span>
+							    <span>85%</span>
 							  	</div>
 							</div>
 						</div>
@@ -458,6 +458,17 @@
 							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
 							    <span>95%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>Design</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
+							    <span>75%</span>
 							  	</div>
 							</div>
 						</div>
