Add 7Cylinders Project

--- a/index.html
+++ b/index.html
@@ -502,13 +502,13 @@
     				</div>
   				</div>
   				<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/beymenProject.png);">
-    					<a href="http://beymun.net/">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/7cylinders.png);">
+    					<a href="http://7-Cylinders.com/">
 							<div class="overlay"></div>
 							<div class="text text-center p-4">
-								<h3>Full stack project</h3>
+								<h3>Branding &amp; Landing Page</h3>
 								<span>Web Development</span><br>
-								<span>American University in Lebanon - AUL</span>
+								<span>7 Cylinders - Car Service Center</span>
 							</div>
 						</a>
     				</div>
