--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
         <section class="about-text">
           <p>
-            I am Ibrahim, a highly motivated and dedicated full stack developer with a strong background in web development and a specialization in .NET framework. With a Bachelor's degree in Business Information Systems from Helwan University, I possess a solid foundation in both business and technology.<br> With two years of experience in the web development field, I have successfully delivered high-quality projects, showcasing my proficiency in front-end and backend development using technologies like HTML, CSS, JavaScript, and frameworks such as ASP.NET and MVC.
+            I am Ibrahim, a highly motivated and dedicated full stack developer with a strong background in web development and a specialization in .NET framework. With a Bachelor's degree in Business Information Systems from Helwan University, I possess a solid foundation in both business and technology.<br> With two years of experience in the web development field, I have successfully delivered high-quality projects, showcasing my proficiency in front-end and backend development using technologies like HTML, CSS, JavaScript, and frameworks such as ASP.NET and MVC.
           </p>
 
           <p>
@@ -450,7 +450,223 @@
         <header>
           <h2 class="h2 article-title">Resume</h2>
         </header>
+        <section class="timeline">
 
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Work Experience</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Junior Full Stack Developer</h4>
+              <span>Ministry of Planning and Economic Development</span>
+
+              <span>Apr 2023 — Present</span>
+
+              <p class="timeline-text">
+                The Ministry of Planning is now responsible for most digital
+transformation projects in the Arab Republic of Egypt.
+These projects include
+<br>Ministry of Health projects: births and deaths, vaccinations,
+mobile cars.
+<br>Ministry of Justice Projects: Management and Governance
+of State Assets and Personnel Management System.
+<br>Ministry of International Cooperation Projects: External
+Debt Management.
+<br>
+                Skills: Servers · Complex SQL Queries · ASP.NET · C# · MVC · HTML · CSS · JavaScript · jQuery
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Junior Full Stack Developer</h4>
+              <span>Technology and Business Integration</span>
+              <span>Apr 2023 - Jun 2023 (Part-Time Remote)</span>
+              <span>Oct 2022 - Apr 2023 (Full-Time on-site)</span>
+
+              <p class="timeline-text">
+                My responsibility was to create and design websites and
+                create Apis for mobile applications. The company was
+                basically creating and developing Erp systems and we were
+                creating programs that integrated with the invoice and
+                electronic receipt systems.
+                <br>
+                Skills: APIs · Integration · ASP.NET · C# · MVC · HTML · CSS · JavaScript · jQuery
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">ICT Support</h4>
+              <span>United Nations Climate
+                Change Conference (COP27)
+                </span>
+
+              <span>Oct 2022 - Nov 2022</span>
+
+              <p class="timeline-text">
+                The Climate Conference is a conference held every year in a
+different country. In its 27th edition, which was held in Egypt, I
+had the honor to participate and be part of the organizing team
+for this event, so I was part of the ICT support team.
+Participants inquired if they had any problems using the
+application. Also, I was part of the team to follow up on the
+meeting and negotiation rooms, and my responsibility at that
+time was to follow up on the meetings, ensure the safety of the
+room’s devices, record these meetings, and stream them on
+various communication platforms.
+<br>
+                Skills: Team Leading · ICT · Communication · Problem Solving
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Back end .Net Instructor</h4>
+              <span>Techno Masr</span>
+
+              <span>Jan 2022 - Dec 2022</span>
+
+              <p class="timeline-text">
+                As an ASP.NET Instructor at Techno Masr, I designed and
+delivered ASP.NET web development courses, fostering a
+dynamic learning environment. Responsibilities included
+curriculum development, hands-on instruction, project
+guidance, and technical support. Achievements included high
+student success rates and active involvement in staying
+updated with industry trends
+
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Manager Assistant</h4>
+              <span>Algmmal Group</span>
+
+              <span>May 2020 - Jul 2022 (Part-Time)</span>
+
+              <p class="timeline-text">
+
+                Skills: Java · Spring Boot
+              </p>
+
+            </li>
+
+          </ol>
+
+        </section>
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Training and Workshops Experience</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Full Stack Developer Trainee</h4>
+              <span>National Council for Women</span>
+
+              <span>Sep 2022 — Oct 2022</span>
+
+              <p class="timeline-text">
+                Summer training for the second consecutive year in the
+same place but this time we were fully responsible for a
+new application aimed at following up on employees and
+calculating incentives for each employee.
+              </p>
+
+            </li>
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Web Designer Trainee</h4>
+              <span>National Telecommunication Institute</span>
+              <span>Sep 2022 — Oct 2022 (Remote)</span>
+              <p class="timeline-text">
+                The training provided by the National Telecommunications
+Institute (INEC) focused on web design using design
+languages HTML, CSS, JS, and BootStrap.
+              </p>
+
+            </li>
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Full Stack Developer Trainee</h4>
+              <span>Elaraby Group</span>
+              <span>Aug 2022 — Aug 2022 (Remote)</span>
+              <p class="timeline-text">
+                The training provided by El-Araby Trading and Industry
+Company I was training in the information technology
+department and my specialization was the creation and
+development of websites using .Net.
+
+              </p>
+
+            </li>
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Full Stack Developer Trainee</h4>
+              <span>Linked Gates Company</span>
+              <span>Dec 2021 — Jan 2022</span>
+              <p class="timeline-text">
+                The training provided by LinkedGates has been trained in
+creating and designing websites and dealing with
+advanced databases.
+
+              </p>
+
+            </li>
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Full Stack Developer Trainee</h4>
+              <span>National Council for Women</span>
+              <span>Sep 2021 — Oct 2021</span>
+              <p class="timeline-text">
+                The training provided by the National Council for Women
+(NCW) - Egypt, the content of which was the
+establishment of internal programming to manage the data
+of women benefiting from the Council's services, was part
+of the team working on this project using the technique of
+.Net.
+
+              </p>
+
+            </li>
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">CODING AND PROGRAMMING TRAINEE</h4>
+              <span>Samsung Innovation Campus</span>
+              <span>Jul 2021 — Sep 2021</span>
+              <p class="timeline-text">
+                Samsung International's training was aimed at learning the
+basics of software and training in creating many programs
+using different programming languages such as Python.
+
+
+              </p>
+
+            </li>
+          </ol>
+
+        </section>
+        
         <section class="timeline">
 
           <div class="title-wrapper">
@@ -465,131 +681,19 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Parul University</h4>
+              <h4 class="h4 timeline-item-title">Helwan University</h4>
 
-              <span>2015 — 2019</span>
+              <span>2019 — 2023</span>
 
               <p class="timeline-text">
-                Bachelor of Technology - Computer Science
+                Bachelor of Business Information Systems
                 <br>
-                Grade: 3.14 GPA
+                Grade: 3.25 GPA
                 </br>
 
               </p>
 
             </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Lal Bahadur Shastri Vidhyalaya</h4>
-
-              <span>2013 — 2015</span>
-
-              <p class="timeline-text">
-                High School Diploma, Mathematics
-                <br>
-                Grade: A+
-                </br>
-              </p>
-
-            </li>
-
-          </ol>
-
-        </section>
-
-        <section class="timeline">
-
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
-
-            <h3 class="h3">Experience</h3>
-          </div>
-
-          <ol class="timeline-list">
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Senior Mobile Application Developer</h4>
-              <span>TenUp Software Services LLP</span>
-
-              <span>Apr 2022 — Present</span>
-
-              <p class="timeline-text">
-                Skills: Google Cloud Platform (GCP) · AngularJS · iOS · Ionic · Flutter · Android · Firebase
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Software Development Engineer II </h4>
-              <span>Matrix Comsec Pvt. Ltd.</span>
-              <span>Apr 2021 - Apr 2022 · 1 yr 1 mo</span>
-
-              <p class="timeline-text">
-                Work and manage the Matrix products based on Security, Access Control & Time-Attendance called Cosec
-                APTA, Cosec ACS, Cosec VMS. This Product is used to mark employees' attendance on a daily basis using
-                face recognition, Live location, or via communication with the company door devices. Proofreading app
-                code and correcting mistakes before each app is released.
-                <br>
-                Skills: Flutter · Android · Xamarin · C# · SwiftUI
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Android and Flutter Developer Trainee</h4>
-              <span>Rishabh Software Pvt. Ltd.</span>
-
-              <span>Aug 2019 - Dec 2020 · 1 yr 5 mos</span>
-
-              <p class="timeline-text">
-                · Worked on the Flutter project based on the laundry In which you can access features like Pickup,
-                Drop-off the clothes for different Laundry service based on your location. You can also Make payment
-                online through the application itself.
-                <br>· Worked on the Flutter project based on the laundry In which you can access features like Pickup,
-                Drop-off the clothes for different Laundry service based on your location. You can also Make payment
-                online through the application itself.
-                <br>
-                Skills: Flutter · Android · Xamarin
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Android Developer Intern</h4>
-              <span>Rishabh Software Pvt. Ltd.</span>
-
-              <span>Jun 2019 - Jul 2019 · 2 mos</span>
-
-              <p class="timeline-text">
-                · A flutter warranty app in which you can add the products warranty with the Whole description and
-                Photos. You can also set a expiry Reminder. When your product going to be expired, the app give you
-                notification for specific product as per your notification preferences.<br>
-                Skills: Flutter · Android · Xamarin
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Software Developer Intern</h4>
-              <span>Rishabh Software Pvt. Ltd.</span>
-
-              <span>Jan 2019 - May 2019 · 5 mos</span>
-
-              <p class="timeline-text">
-
-                Skills: Java · Spring Boot
-              </p>
-
-            </li>
-
           </ol>
 
         </section>
@@ -603,7 +707,20 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Flutter & Dart</h5>
+                <h5 class="h5">HTML</h5>
+                <data value="100">100%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 100%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">CSS</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -616,34 +733,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Android & Java</h5>
-                <data value="80">80%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">iOS</h5>
-                <data value="75">75%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 75%;"></div>
-              </div>
-
-            </li>
-
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Firebase</h5>
+                <h5 class="h5">Java Script</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -653,19 +743,80 @@
 
             </li>
 
+
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Ionic</h5>
-                <data value="70">70%</data>
+                <h5 class="h5">C#</h5>
+                <data value="95">95%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
+                <div class="skill-progress-fill" style="width: 95%;"></div>
               </div>
 
             </li>
 
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">.Net Framework</h5>
+                <data value="90">90%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%;"></div>
+              </div>
+
+            </li>
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">SQL Server</h5>
+                <data value="90">90%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%;"></div>
+              </div>
+
+            </li>
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">MySQL</h5>
+                <data value="90">90%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%;"></div>
+              </div>
+
+            </li>
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Angular</h5>
+                <data value="50">50%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 50%;"></div>
+              </div>
+
+            </li>
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">PHP</h5>
+                <data value="90">90%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%;"></div>
+              </div>
+
+            </li>
           </ul>
 
         </section>
@@ -847,13 +998,13 @@
           <h2 class="h2 article-title">Contact</h2>
         </header>
 
-        <section class="mapbox" data-mapbox>
+        <!-- <section class="mapbox" data-mapbox>
           <figure>
             <iframe
               src="https://www.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=vadodara&amp;t&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
-        </section>
+        </section> -->
 
         <section class="contact-form">
 
