Add Portfolio Items

--- a/index.html
+++ b/index.html
@@ -846,11 +846,11 @@ using different programming languages such as Python.
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Mobile Applications</button>
+              <button data-filter-btn>web development</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Pub.dev</button>
+              <button data-filter-btn>Mobile Development</button>
             </li>
 
           </ul>
@@ -874,11 +874,11 @@ using different programming languages such as Python.
               </li>
 
               <li class="select-item">
-                <button data-select-item>Mobile Applications</button>
+                <button data-select-item>web development</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Pub.dev</button>
+                <button data-select-item>Mobile Development</button>
               </li>
 
             </ul>
@@ -888,23 +888,74 @@ using different programming languages such as Python.
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://www.eveo-led.com/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/Eveo-Led-Project.png" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Eveo led Website Project</h3>
+
+                <p class="project-category">Web design</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://tbico.cloud/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/tbi-project.png" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Tbi Website Project</h3>
 
                 <p class="project-category">Web development</p>
 
               </a>
             </li>
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://7clyinders.netlify.app/">
 
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/7Cylinders-Project.png" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">7 Cylinders Website Project</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="mobile development">
+              <a href="https://play.google.com/store/apps/details?id=com.joKey.learn_management&hl=en_US">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/JoeKey-Project.png" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">JoeKey E-Learning Application</h3>
+
+                <p class="project-category">Mobile Development</p>
+
+              </a>
+            </li>
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
 
@@ -913,12 +964,46 @@ using different programming languages such as Python.
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/JoeKeyDash-Project.png" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">JoeKey Admin Dashboard</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Web Development</p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/3yadty-Project.png" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">3yadty Management System</h3>
+
+                <p class="project-category">Web Development</p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/IBMS-Project.png" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">IBMS ERP</h3>
+
+                <p class="project-category">Web Development</p>
 
               </a>
             </li>
@@ -948,7 +1033,7 @@ using different programming languages such as Python.
 
           <ul class="blog-posts-list">
 
-            <li class="blog-post-item">
+            <!-- <li class="blog-post-item">
               <a href="https://medium.com/@i_m_alfaizkhan/exploring-the-stripe-payment-gateway-in-flutter-e8524a0ade75"
                 target="_blank">
 
@@ -976,7 +1061,7 @@ using different programming languages such as Python.
                 </div>
 
               </a>
-            </li>
+            </li> -->
 
           </ul>
 
