--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Junior Full Stack Developer</h4>
+              <h4 class="h4 timeline-item-title">Mid-Senior Full Stack Developer</h4>
               <span>Ministry of Planning and Economic Development</span>
 
               <span>Apr 2023 — Present</span>
