--- a/index.html
+++ b/index.html
@@ -461,10 +461,29 @@
           </div>
 
           <ol class="timeline-list">
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Senior Full Stack Developer</h4>
+              <span>HelpTK</span>
+
+              <span>Mar 2024 — Present (Part-time)</span>
+
+              <p class="timeline-text">
+                Leveraged full-stack development expertise within the .NET framework to contribute to Enterprise Resource Planning (ERP) systems projects. Responsibilities included:
+
+Full-stack Development: Designed, developed, and maintained both front-end and back-end components of ERP system features.<br>
+.NET Technologies: Utilized proficient knowledge of .NET languages (C#, VB.NET, etc.) and frameworks (ASP.NET MVC/Core, etc.) to build robust and scalable solutions.
+<br>ERP Systems Expertise: Applied understanding of ERP systems functionality to develop features that streamline business processes and improve operational efficiency.
+<br>Collaboration: Worked closely with cross-functional teams (business analysts, designers, QA) to ensure project requirements were met and delivered on time.
+<br>Code Quality: Emphasized clean, well-documented, and maintainable code to ensure long-term system health.
+                Skills: Servers · Complex SQL Queries · ASP.NET · C# · MVC · HTML · CSS · JavaScript · jQuery
+              </p>
+
+            </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Mid-Senior Full Stack Developer</h4>
+              <h4 class="h4 timeline-item-title">Senior Full Stack Developer</h4>
               <span>Ministry of Planning and Economic Development</span>
 
               <span>Apr 2023 — Present</span>
