Edit MPED Job description

--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@
               <p class="timeline-text">
                 Leveraged full-stack development expertise within the .NET framework to contribute to Enterprise Resource Planning (ERP) systems projects. Responsibilities included:
 
-<br>Full-stack Development: Designed, developed, and maintained both front-end and back-end components of ERP system features.<br>
-.NET Technologies: Utilized proficient knowledge of .NET languages (C#, VB.NET, etc.) and frameworks (ASP.NET MVC/Core, etc.) to build robust and scalable solutions.
-<br>ERP Systems Expertise: Applied understanding of ERP systems functionality to develop features that streamline business processes and improve operational efficiency.
-<br>Collaboration: Worked closely with cross-functional teams (business analysts, designers, QA) to ensure project requirements were met and delivered on time.
+<br><bold>Full-stack Development:</bold> Designed, developed, and maintained both front-end and back-end components of ERP system features.<br>
+<bold>.NET Technologies:</bold> Utilized proficient knowledge of .NET languages (C#, VB.NET, etc.) and frameworks (ASP.NET MVC/Core, etc.) to build robust and scalable solutions.
+<br><bold>ERP Systems Expertise:</bold> Applied understanding of ERP systems functionality to develop features that streamline business processes and improve operational efficiency.
+<br><bold>Collaboration:</bold> Worked closely with cross-functional teams (business analysts, designers, QA) to ensure project requirements were met and delivered on time.
 <br>Code Quality: Emphasized clean, well-documented, and maintainable code to ensure long-term system health.<br>
                 Skills: Servers · Complex SQL Queries · ASP.NET · C# · MVC · HTML · CSS · JavaScript · jQuery
               </p>
@@ -489,15 +489,7 @@
               <span>Apr 2023 — Present</span>
 
               <p class="timeline-text">
-                The Ministry of Planning is now responsible for most digital
-transformation projects in the Arab Republic of Egypt.
-These projects include
-<br>Ministry of Health projects: births and deaths, vaccinations,
-mobile cars.
-<br>Ministry of Justice Projects: Management and Governance
-of State Assets and Personnel Management System.
-<br>Ministry of International Cooperation Projects: External
-Debt Management.
+                As a Senior Full-Stack Developer (.NET) at the Ministry of Planning and Economic Development, you spearheaded digital transformation projects. You built critical systems for the Ministries of Health, Justice, and International Cooperation, demonstrating expertise in government workflows and impactful solutions.
 <br>
                 Skills: Servers · Complex SQL Queries · ASP.NET · C# · MVC · HTML · CSS · JavaScript · jQuery
               </p>
