--- a/index.html
+++ b/index.html
@@ -489,8 +489,7 @@
               <span>Apr 2023 — Present</span>
 
               <p class="timeline-text">
-                As a Senior Full-Stack Developer (.NET) at the Ministry of Planning and Economic Development, you spearheaded digital transformation projects. You built critical systems for the Ministries of Health, Justice, and International Cooperation, demonstrating expertise in government workflows and impactful solutions.
-<br>
+                I spearheaded digital transformation projects as a Senior Full-Stack Developer (.NET) at the Ministry of Planning and Economic Development. I built critical systems for the Ministries of Health, Justice, and International Cooperation, demonstrating expertise in government workflows and impactful solutions.<br>
                 Skills: Servers · Complex SQL Queries · ASP.NET · C# · MVC · HTML · CSS · JavaScript · jQuery
               </p>
 
