--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@
               <p class="timeline-text">
                 Leveraged full-stack development expertise within the .NET framework to contribute to Enterprise Resource Planning (ERP) systems projects. Responsibilities included:
 
-<br><bold>Full-stack Development:</bold> Designed, developed, and maintained both front-end and back-end components of ERP system features.<br>
-<bold>.NET Technologies:</bold> Utilized proficient knowledge of .NET languages (C#, VB.NET, etc.) and frameworks (ASP.NET MVC/Core, etc.) to build robust and scalable solutions.
-<br><bold>ERP Systems Expertise:</bold> Applied understanding of ERP systems functionality to develop features that streamline business processes and improve operational efficiency.
-<br><bold>Collaboration:</bold> Worked closely with cross-functional teams (business analysts, designers, QA) to ensure project requirements were met and delivered on time.
+<br><b>Full-stack Development:</b> Designed, developed, and maintained both front-end and back-end components of ERP system features.<br>
+<b>.NET Technologies:</b> Utilized proficient knowledge of .NET languages (C#, VB.NET, etc.) and frameworks (ASP.NET MVC/Core, etc.) to build robust and scalable solutions.
+<br><b>ERP Systems Expertise:</b> Applied understanding of ERP systems functionality to develop features that streamline business processes and improve operational efficiency.
+<br><b>Collaboration:</b> Worked closely with cross-functional teams (business analysts, designers, QA) to ensure project requirements were met and delivered on time.
 <br>Code Quality: Emphasized clean, well-documented, and maintainable code to ensure long-term system health.<br>
                 Skills: Servers · Complex SQL Queries · ASP.NET · C# · MVC · HTML · CSS · JavaScript · jQuery
               </p>
